--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Index.cshtml
@@ -24,7 +24,7 @@
     <hr />
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New Portfolio Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Add" class="btn wprt-button" style="color: #fff; background-color: #ffc925;">Create New Portfolio Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
