--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -15,13 +15,25 @@
         margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
-
-    
-
-        a:hover {
-            color: white;
-            background-color: black;
-        }
+    .wprt-button {
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        display: inline-block;
+        padding: 0.72em 2.1em;
+        letter-spacing: 2px;
+        background-color: #ffc925;
+        border: 2px solid #ffc925;
+        color: #fff;
+        -webkit-transition: all ease .238s;
+        -moz-transition: all ease .238s;
+        transition: all ease .238s;
+        border-radius: 8%;
+    }
+    .wprt-button:hover {
+        background-color: black;
+        border-color: black;
+        color: #fff;
+    }
 </style>
 
 <section class="panel common">
@@ -32,7 +44,7 @@
 
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn" style=" color: #fff; background-color: #ffc925;" >Create New About Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn wprt-button" style=" color: #fff; background-color: #ffc925;" >Create New About Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
