--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -16,6 +16,10 @@
         margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
+    .wprt-button:hover {
+        background-color: #252525;
+        border-color: #252525;
+        color: #fff
 </style>
 
 <section class="panel common">
@@ -25,7 +29,7 @@
     <hr />
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn" style="color: #fff; background-color: #ffc925;">Create New News Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" class="btn wprt-button" style="color: #fff; background-color: #ffc925;">Create New News Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
