--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Index.cshtml
@@ -24,7 +24,7 @@
         <hr />
         <div class="panel-body">
             <div class="button-create">
-                <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New Project Element</a>
+                <a asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Add" class="btn wprt-button" style="color: #fff; background-color: #ffc925;">Create New Project Element</a>
             </div>
             <div class="adv-table editable-table ">
 
