--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -25,7 +25,7 @@
     <hr />
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" class="btn" style="color: #fff; background-color: #ffc925;">Create New Service Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" class="btn wprt-button" style="color: #fff; background-color: #ffc925;">Create New Service Element</a>
         </div>
         <div class="adv-table editable-table ">
 
