--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -163,7 +163,7 @@
     <!-- Revolution Slider -->
     <partial name="Revolution" />
 
-  @RenderSection("scrips",false)
+  @RenderSection("Scrips",false)
 </body>
 </html>
 
