--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<ProjectViewModel>
-@foreach (var item in Model)
-{
+
     <div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
         <div class="cbp-wrapper-outer">
             <div class="cbp-wrapper">
-
-                <div class="cbp-item architecture interior workspace" style="width: 337px; left: 0px; top: 0px;">
+@foreach (var item in Model)
+{
+                <div class="cbp-item" style="width: 337px; left: 0px; top: 0px;">
                     <div class="cbp-item-wrapper">
                         <div class="project-item">
                             <div class="inner">
@@ -15,7 +15,7 @@
                                         <figcaption>
                                             <div>
                                                 <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
-                                                
+
                                             </div>
                                         </figcaption>
                                     </figure>
@@ -30,7 +30,7 @@
                 </div>
 
 
-
+}
             </div>
         </div>
-    </div>}
+    </div>
