AdminPanelde Button-larin hover-lerin hell etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -5,14 +5,17 @@
             margin-left: 20px;
             background-color: rgb(241,242, 247);
         }
-
             .add-model header {
                 height: 30px;
                 margin-top: 15px;
             }
-
         .add-body {
             margin-top: -10px;
+        }
+        .about-button:hover {
+            background-color: black !important;
+            border-color: black;
+            color: #fff;
         }
     </style>
 
@@ -70,7 +73,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-offset-2 col-lg-10">
-                                <button class="btn btn-success" type="submit">Save</button>
+                                <button class="btn btn-success about-button" type="submit">Save</button>
                                 <button class="btn btn-default cancel-button" type="button">Cancel</button>
                             </div>
                         </div>
