--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -15,25 +15,14 @@
         margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
-    .wprt-button {
-        font-family: "Montserrat", sans-serif;
-        font-weight: 500;
-        display: inline-block;
-        padding: 0.72em 2.1em;
-        letter-spacing: 2px;
-        background-color: #ffc925;
-        border: 2px solid #ffc925;
-        color: #fff;
-        -webkit-transition: all ease .238s;
-        -moz-transition: all ease .238s;
-        transition: all ease .238s;
-        border-radius: 8%;
-    }
-    .wprt-button:hover {
-        background-color: black;
-        border-color: black;
-        color: #fff;
-    }
+        .about-button:hover {
+            background-color: black !important;
+            border-color: black;
+            color: #fff;
+        }
+        .edit:hover{
+            border-color: black;
+        }
 </style>
 
 <section class="panel common">
@@ -44,7 +33,7 @@
 
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn wprt-button" style=" color: #fff; background-color: #ffc925;" >Create New About Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" class="btn about-button" style=" color: #fff; background-color: #ffc925;" >Create New About Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
@@ -71,7 +60,7 @@
                                     <td class=" ">@item.Content</td>
                                     <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                     <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                    <td class=" "><a class="btn btn-danger delete delete-about" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                                    <td class=" "><a class="btn btn-danger delete delete-about about-button" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                                 </tr>
                             }
                         }
