--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Index.cshtml
@@ -12,10 +12,11 @@
         margin-top: 45px !important;
         background-color: RGB(241, 242, 247) !important;
     }
-    .wprt-button:hover {
-        background-color: #252525;
-        border-color: #252525;
-        color: #fff
+    .about-button:hover {
+        background-color: black !important;
+        border-color: black;
+        color: #fff;
+    }
 </style>
 
 <section class="panel common">
@@ -25,7 +26,7 @@
     <hr />
     <div class="panel-body">
         <div class="button-create">
-            <a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" class="btn wprt-button" style="color: #fff; background-color: #ffc925;">Create New Contact Element</a>
+            <a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Add" class="btn about-button" style="color: #fff; background-color: #ffc925;">Create New Contact Element</a>
         </div>
         <div class="adv-table editable-table ">
             <div class="space15"></div>
