--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Message/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Message/Index.cshtml
@@ -3,6 +3,14 @@
     ViewData["Title"] = "Index";
 }
 
+<style type="text/css">
+    .about-button:hover {
+        background-color: black !important;
+        border-color: black;
+        color: #fff;
+    }
+</style>
+
     <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
         <div class="row"><div class="col-lg-6"><div id="editable-sample_length" class="dataTables_length"><label><select size="1" name="editable-sample_length" aria-controls="editable-sample" class="form-control xsmall"><option value="5" selected="selected">5</option><option value="15">15</option><option value="20">20</option><option value="-1">All</option></select> records per page</label></div></div><div class="col-lg-6"><div class="dataTables_filter" id="editable-sample_filter"><label>Search: <input type="text" aria-controls="editable-sample" class="form-control medium"></label></div></div></div><table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
             <thead>
@@ -17,7 +25,7 @@
                         <td class=" "> @item.Email</td>
                         <td class=" ">@item.SendDate</td>
                         <td class="center ">@item.Subject</td>
-                        <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
+                        <td class=" "><a class="edit about-button" href="javascript:;">Edit</a></td>
                         <td class=" "><a class="delete" href="javascript:;">Delete</a></td>
                     </tr>
                 }
