--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -14,6 +14,11 @@
         .add-body {
             margin-top: -10px;
         }
+        .about-button:hover {
+            background-color: black !important;
+            border-color: black;
+            color: #fff;
+        }
     </style>
 
         <div class="row">
@@ -42,7 +47,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-lg-offset-2 col-lg-10">
-                                    <button class="btn btn-success" type="submit">Save</button>
+                                    <button class="btn btn-success about-button" type="submit">Save</button>
                                     <button class="btn btn-default cancel-button" type="button">Cancel</button>
                                 </div>
                             </div>
