--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Add.cshtml
@@ -14,13 +14,18 @@
         .add-body {
             margin-top: -10px;
         }
+        .about-button:hover {
+            background-color: black !important;
+            border-color: black;
+            color: #fff;
+        }
     </style>
 
 <div class="row">
     <div class="col-lg-12">
         <section class="panel add-model">
             <header class="panel-heading">
-                Add About Elements
+                Add Testimonial Elements
             </header>
             <hr />
             <div class="panel-body add-body">
@@ -33,12 +38,6 @@
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input asp-for="Position" id="f-name" class="form-control" required placeholder="Position">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success" type="submit">Submit</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                     <div class="form-group ">
@@ -54,6 +53,12 @@
                     <div class="form-group ">
                         <div class="col-lg-10">
                             <textarea asp-for="ContentRu" class="form-control " id="ccomment" required="" placeholder="Content RU"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button class="btn btn-success about-button" type="submit">Save</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
