--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Testimonial/Update.cshtml
@@ -17,6 +17,11 @@
     .add-body {
         margin-top: -10px;
     }
+    .about-button:hover {
+        background-color: black !important;
+        border-color: black;
+        color: #fff;
+    }
 </style>
 
 
@@ -40,12 +45,6 @@
                             <textarea asp-for="Position" class="form-control " id="ccomment" placeholder="Position"></textarea>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-lg-offset-2 col-lg-10">
-                            <button class="btn btn-success" type="submit">Submit</button>
-                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
-                        </div>
-                    </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
                             <textarea asp-for="ContentAz" class="form-control " id="ccomment" placeholder="Content AZE"></textarea>
@@ -59,6 +58,12 @@
                     <div class="form-group ">
                         <div class="col-lg-10">
                             <textarea asp-for="ContentRu" class="form-control " id="ccomment" placeholder="Content RU"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button class="btn btn-success about-button" type="submit">Save</button>
+                            <button class="btn btn-default cancel-button" type="button">Cancel</button>
                         </div>
                     </div>
                 </form>
