--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -38,7 +38,7 @@
 
 
         </div>
-        <div id="projects" >
+        <div id="naib" >
           
                 </div>
                 @section scrips{
@@ -47,7 +47,7 @@
                             $(".mains").click(function () {
                                 var id = $(this).data("id");
                                 alert(id);
-                                $("#projects").load(`/Portfolio/Project/${id}`);
+                                $("#naib").load(`/Portfolio/Project/${id}`);
 
                             });
 
