--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -5,7 +5,7 @@
             <div class="cbp-wrapper">
 @foreach (var item in Model)
 {
-                <div class="cbp-item" style="width: 337px; left: 0px; top: 0px;">
+                <div class="cbp-item">
                     <div class="cbp-item-wrapper">
                         <div class="project-item">
                             <div class="inner">
