aBOUT Index-de Localizer yazdim

--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -14,3 +14,5 @@
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
 @using ConstructionSite.DTO.FrontViewModels.Blog
+@using ConstructionSite.Localization
+@using ConstructionSite.Helpers.Constants 
