Home, Message bitdi

--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -1,4 +1,6 @@
-﻿<!-- Featured Title -->
+﻿@inject SharedLocalizationService Localizer
+
+<!-- Featured Title -->
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
