--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -36,7 +36,7 @@
                                         <div class="inner">
                                             <div class="image">
 
-                                                <div class="thumb"><img src="@item.image" alt="image"  ></div>
+                                                <div class="thumb"><img  style="width:270px;height:180px" src="@item.image" alt="image"  ></div>
 
                                                 <ul class="socials clearfix">
                                                     <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
