--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -98,23 +98,9 @@
             <footer id="footer">
                 <div id="footer-widgets" class="container style-1">
                     <div class="row">
-                        @Html.Partial("Adress")
-                        
-                        <div class="col-md-3">
-                            <div class="widget widget_links">
-                                <h2 class="widget-title">Useful links</h2>
-                                <ul class="links col2">
-                                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Term of Use</a></li>
-                                    <li class="last"><a asp-controller="About" asp-action="Index">About Us</a></li>
-                                    <li><a asp-controller="Blog" asp-action="Index">News</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
-                                    <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
-                                </ul>
-                            </div>
-                        </div>
+                       
+                        @await Component.InvokeAsync("Adress") 
+                        <partial name="_UsefulLink"/>
                     </div>
                 </div>
             </footer>
