--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ServiceViewModel>
+@inject SharedLocalizationService Localizer
 
 <style>
     .sekil {
@@ -11,7 +12,7 @@
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
             <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">Our Services</h1>
+                <h1 class="featured-title-heading">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.OurServices)</h1>
             </div>
         </div>
     </div>
@@ -26,7 +27,9 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="110" data-mobi="30" data-smobi="30" style="height:110px"></div>
-                                </div><!-- /.col-md-12 -->
+                                </div>
+                                <!-- /.col-md-12 -->
+
                                 @foreach (var item in Model)
                                 {
                                     <div class="col-md-4">
@@ -35,31 +38,27 @@
                                             <div class="service-item-wrap">
                                                 <h3 class="title font-size-18"><a href="service-Construction.html">@item.Name</a></h3>
                                                 <p indextext="@item.Tittle"></p>
-                                                <a asp-controller="Services" asp-action="Services"
-                                               asp-route-id="@item.Id" class="wprt-button small rounded-3px">READ MORE</a>
+                                                <a asp-controller="Services" asp-action="Services" asp-route-id="@item.Id" class="wprt-button small rounded-3px">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ReadMore)</a>
+                                            </div>
                                         </div>
+                                        <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30" style="height:60px"></div>
                                     </div>
+                                 }
+                                 <div class="col-md-12">
+                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                                 </div>
+                                <!-- /.col-md-12 -->
 
-                                    <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30" style="height:60px"></div>
+                            </div>
+                            <!-- /.row -->
+                            
+                        </div>
+                        <!-- /.container -->
 
-                                    
-
-                                  
-                                </div>
-
-
-                                    }
-
-
-                                    <div class="col-md-12">
-                                        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                                    </div><!-- /.col-md-12 -->
-                                </div><!-- /.row -->
-                            </div><!-- /.container -->
-                        </section>
-                    </div>
+                    </section>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
