--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -29,8 +29,8 @@
             </header>
             <hr />
             <div class="panel-body add-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
-                    <input type="hidden" name="PortfolioId" value="@Model.PortfolioId" />
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Project" asp-action="Update" method="post" enctype="multipart/form-data">
+                   
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input type="text" asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
