--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -33,10 +33,10 @@
             <hr />
             <div class="panel-body add-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
-                    <input type="hidden" name="Id" value="@Model.Id" />
-                    <input type="hidden" name="ServerId" value="@Model.ServerId" />
-                    <input type="hidden" name="SubServiceId" value="@Model.SubServiceId" />
-                    <input type="hidden" name="imageId" value="@Model.imageId" />
+                    <input type="hidden" asp-for="Id" />
+                    <input type="hidden" asp-for="ServerId" />
+                    
+                    <input type="hidden" asp-for="imageId" />
                     <div class="form-group">
                         <div class="col-lg-10">
                             <input asp-for="NameAz" id="f-name" class="form-control" placeholder="Name AZE">
