--- a/ConstructionSite/Views/Services/Single.cshtml
+++ b/ConstructionSite/Views/Services/Single.cshtml
@@ -18,7 +18,7 @@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
 
-                <div class="row">
+                <div class="row" style="float:left">
                     <div class="col-md-12">
                         <div class="wprt-spacer" data-desktop="80" data-mobi="40" data-smobi="40" style="height:80px"></div>
 
