Delete_ABout_about

--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -12,7 +12,7 @@
                 <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30" style="height:36px"></div>
 
                 <p class="wprt-subtitle">@Model.Tittle</p>
-                <div class="link">  <a asp-controller="About" asp-action="About" asp-route-id="@Model.AboutID" class="wprt-button small rounded-3px">READ MORE</a></div>
+                <div class="link">  <a asp-controller="About" asp-action="Index"  class="wprt-button small rounded-3px">READ MORE</a></div>
 
                 <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
 
