--- a/ConstructionSite/Views/Portfolio/Index.cshtml
+++ b/ConstructionSite/Views/Portfolio/Index.cshtml
@@ -28,12 +28,13 @@
             </div>
             @foreach (var item in Model)
             {
-                <div data-filter=".architecture" class="cbp-filter-item cbp-filter-item-active mains" data-id="@item.Id">
+                <div  class="cbp-filter-item cbp-filter-item-active mains" data-id="@item.Id">
                     <span>@item.Name</span>
                 </div>
             }
         </div>
-        <div id="projects"></div>
+        <div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
+        </div>
     </div>
     <!--/.wprt-project -->
 
