--- a/ConstructionSite/Views/Portfolio/Project.cshtml
+++ b/ConstructionSite/Views/Portfolio/Project.cshtml
@@ -1,33 +1,33 @@
 ﻿@model IEnumerable<ProjectViewModel>
 
-<div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
+
     <div class="cbp-wrapper-outer">
         <div class="cbp-wrapper">
             @foreach (var item in Model)
             {
-                <div class="cbp-item" style="width: 337px; left: 0px; top: 0px;">
-                    <div class="cbp-item-wrapper">
-                        <div class="project-item">
-                            <div class="inner">
-                                <div class="grid">
-                                    <figure class="effect-zoe">
-                                        <img src="@item.Image" alt="image">
-                                        <figcaption>
-                                            <div>
-                                                <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
-                                            </div>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-
-                                <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="@item.Name">
-                                    <i class="fa fa-arrows-alt"></i>
-                                </a>
+            <div class="cbp-item building office workspace" style="width: 337px; height: 232px; left: 337px; top: 0px;">
+                <div class="cbp-item-wrapper">
+                    <div class="project-item">
+                        <div class="inner">
+                            <div class="grid">
+                                <figure class="effect-honey">
+                                    <img src="@item.Image" alt="image">
+                                    <figcaption>
+                                        <div>
+                                            <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
+                                            <p>Construction</p>
+                                        </div>
+                                    </figcaption>
+                                </figure>
                             </div>
+
+                            <a class="project-zoom cbp-lightbox" href="assets/img/projects/2-full.jpg" data-title="LUXURY BUILDINGS">
+                                <i class="fa fa-arrows-alt"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
+            </div>
             }
         </div>
     </div>
-</div>
