--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -1,10 +1,12 @@
 ﻿@model AboutViewModel
+@inject SharedLocalizationService Localizer
+
 <section id="about" class="wprt-section clearfix text-center">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
-                <h2 class="text-center margin-bottom-20">ABOUT US</h2>
+                <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
@@ -21,8 +23,13 @@
 
                 </div>
 
-            </div><!-- /.col-md-12 -->
+            </div>
+            <!-- /.col-md-12 -->
 
-        </div><!-- /.row -->
-    </div><!-- /.container -->
+        </div>
+        <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
+
 </section>
