--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -1,11 +1,12 @@
 ﻿@model IEnumerable<BlogViewModel>
+@inject SharedLocalizationService Localizer
 
 <section id="blog" class="wprt-section offer">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60"></div>
-                <h2>BLOG</h2>
+                <h2>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Blog)</h2>
                 <div class="wprt-lines style-1 custom-2">
                     <div class="line-1"></div>
                 </div>
@@ -17,7 +18,7 @@
                 <div class="wprt-service arrow-style-2 has-arrows arrow60 arrow-light" data-layout="slider" data-column="3" data-column2="3" data-column3="2" data-column4="1" data-gaph="30" data-gapv="30">
                     <div id="service-wrap" class="cbp">
                         @foreach (BlogViewModel item in Model)
-                        {
+                    {
                             <div class="cbp-item">
                                 <div class="service-item clearfix">
 
