Resource-da chatmayan keyleri daxil etdim

--- a/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
@@ -1,11 +1,12 @@
 ﻿@model MessageAddViewModel
+@inject SharedLocalizationService Localizer
+
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
             <div class="featured-title-heading-wrap">
-                <h1 class="featured-title-heading">Contact Us</h1>
+                <h1 class="featured-title-heading">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
             </div>
-
         </div>
     </div>
 </div>
@@ -15,9 +16,7 @@
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                       
                         <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
-
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
