--- a/ConstructionSite/Views/Shared/Components/Contact/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Contact/Default.cshtml
@@ -1,9 +1,10 @@
 ﻿@model ContactIndexViewModel
+@inject SharedLocalizationService Localizer
 @if (Model != null)
 {
     <div class="col-md-12">
         <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-        <h2 class="text-center margin-bottom-20">CONTACT US</h2>
+        <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h2>
         <div class="wprt-lines style-2 custom-1">
             <div class="line-1"></div>
         </div>
@@ -13,18 +14,18 @@
     </div>
 
     <div class="col-md-4">
-        <h5>Address</h5>
+        <h5>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Address)</h5>
         <p>@Model.Address</p>
         <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
-        <h5>Phone number</h5>
+        <h5>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.PhoneNumber)</h5>
         <p>@Model.PhoneNumber</p>
         <div class="wprt-spacer" data-desktop="15" data-mobi="0" data-smobi="0"></div>
-        <h5>E-mail address</h5>
+        <h5>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.EmailAddress)</h5>
         <p>@Model.Email</p>
         <div class="wprt-spacer" data-desktop="0" data-mobi="10" data-smobi="10"></div>
     </div>
 }
 else
 {
-    <h2>This data not exists</h2>
+    <h2>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.DataDoesNotExists)</h2>
 }
