--- a/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Messages/Default.cshtml
@@ -29,7 +29,8 @@
 
                                     <p class="wprt-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sit amet iaculis elit. Nam semper ut arcu non placerat. Praesent nibh massa varius.</p>
                                     <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30" style="height:40px"></div>
-                                </div><!-- /.col-md-12 -->
+                                </div>
+                                <!-- /.col-md-12 -->
 
                                 @await Component.InvokeAsync("Contact")
 
@@ -56,14 +57,23 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </form><!-- /.wprt-contact-form -->
-                                </div><!-- /.col-md-8 -->
+                                    </form>
+                                    <!-- /.wprt-contact-form -->
+
+                                </div>
+                                <!-- /.col-md-8 -->
 
                                 <div class="col-md-12">
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="60" data-smobi="60" style="height:100px"></div>
-                                </div><!-- /.col-md-12 -->
-                            </div><!-- /.row -->
-                        </div><!-- /.container -->
+                                </div>
+                                <!-- /.col-md-12 -->
+
+                            </div>
+                            <!-- /.row -->
+
+                        </div>
+                        <!-- /.container -->
+
                     </section>
 
                     <!-- PARTNERS -->
