Components/ Project-in key-ni elave etdim

--- a/ConstructionSite/Views/Shared/Components/Project/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Project/Default.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ProjectViewModel>
+@inject SharedLocalizationService Localizer
 @foreach (var item in Model)
 {
     <div id="projects" class="cbp cbp-caption-active cbp-caption- cbp-ready" style="height: 464px;">
         <div class="cbp-wrapper-outer">
             <div class="cbp-wrapper">
-
                 <div class="cbp-item architecture interior workspace" style="width: 337px; left: 0px; top: 0px;">
                     <div class="cbp-item-wrapper">
                         <div class="project-item">
@@ -15,12 +15,11 @@
                                         <figcaption>
                                             <div>
                                                 <h2><a target="_blank" href="portfolio-main.html">@item.Name</a></h2>
-                                                <p>Construction</p>
+                                                <p>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Construction)</p>
                                             </div>
                                         </figcaption>
                                     </figure>
                                 </div>
-
                                 <a class="project-zoom cbp-lightbox" href="assets/img/projects/1-full.jpg" data-title="@item.Name">
                                     <i class="fa fa-arrows-alt"></i>
                                 </a>
@@ -28,9 +27,7 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
-    </div>}
+    </div>
+}
