--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -1,41 +1,38 @@
 ﻿@model IEnumerable<ServiceViewModel>
    
-    <section id="team" class="wprt-section clearfix text-center">
-        
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                    <h2 class="text-center margin-bottom-20">SERVICES</h2>
-                    <div class="wprt-lines style-2 custom-1">
-                  
-                        <div class="line-1"></div>
-                    </div>
-                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
-                    <p class="wprt-subtitle">
-                        Lorem ipsum dolor
-                        sit amet, consectetur adipiscing elit.
-                        Phasellus sit amet iaculis elit. Nam
-                        semper ut arcu non placerat. Praesent nibh
-                        massa varius.
-                    </p> <div class="link">
-                        <a asp-controller="Services" asp-action="Index" class="wprt-button small rounded-3px">
-                            SEE
-                            ALL
-                        </a>
-                    </div>
-                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
-                    <div class="wprt-team has-bullets bullet-style-1" data-layout="slider" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="30" data-gapv="30">
-                        <div id="team-wrap" class="cbp">
-                            
-                            @foreach (ServiceViewModel item in Model)
-                            {
+<section id="team" class="wprt-section clearfix text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                <h2 class="text-center margin-bottom-20">SERVICES</h2>
+                <div class="wprt-lines style-2 custom-1">
+                    <div class="line-1"></div>
+                </div>
+                <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
+                <p class="wprt-subtitle">
+                    Lorem ipsum dolor
+                    sit amet, consectetur adipiscing elit.
+                    Phasellus sit amet iaculis elit. Nam
+                    semper ut arcu non placerat. Praesent nibh
+                    massa varius.
+                </p> 
+                <div class="link">
+                    <a asp-controller="Services" asp-action="Index" class="wprt-button small rounded-3px">
+                        SEE
+                        ALL
+                    </a>
+                </div>
+                <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
+                <div class="wprt-team has-bullets bullet-style-1" data-layout="slider" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="30" data-gapv="30">
+                    <div id="team-wrap" class="cbp">
+                        @foreach (ServiceViewModel item in Model)
+                        {
                             <div class="cbp-item" style="width: 270px; left: 300px; top: 0px;">
                                 <div class="cbp-item-wrapper">
                                     <div class="member">
                                         <div class="inner">
                                             <div class="image">
-
                                                 <div class="thumb"><img src="@item.image" alt="image"  ></div>
 
                                                 <ul class="socials clearfix">
