--- a/ConstructionSite/Views/Shared/Components/Testimonial/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Testimonial/Default.cshtml
@@ -1,10 +1,12 @@
 ﻿@model IEnumerable<CustomerViewModel>
+@inject SharedLocalizationService Localizer
+
 <section id="testimonials" class="wprt-section">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-                <h2 class="text-center margin-bottom-20">TESTIMONIALS</h2>
+                <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Testimonials)</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
                 </div>
