Layout-un bezi keylerini inject etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject SharedLocalizationService Localizer
+
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en-US">
 
 <head>
@@ -112,14 +114,14 @@
                         </div>
                         <div class="col-md-3">
                             <div class="widget widget_links">
-                                <h2 class="widget-title">Useful links</h2>
+                                <h2 class="widget-title">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.UsefulLinks)</h2>
                                 <ul class="links col2">
-                                    <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                                    <li><a asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Term of Use</a></li>
-                                    <li class="last"><a asp-controller="About" asp-action="Index">About Us</a></li>
-                                    <li><a asp-controller="Blog" asp-action="Index">News</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
+                                    <li><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
+                                    <li><a asp-controller="Portfolio" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Portfolio)</a></li>
+                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.TermOfUse)</a></li>
+                                    <li class="last"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</a></li>
+                                    <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</a></li>
+                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
                                     <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                                     <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
                                 </ul>
