Layout uchun butun keyleri qeyd etdim

--- a/ConstructionSite/Views/Shared/_Layout.cshtml
+++ b/ConstructionSite/Views/Shared/_Layout.cshtml
@@ -122,8 +122,8 @@
                                     <li class="last"><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</a></li>
                                     <li><a asp-controller="Blog" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.News)</a></li>
                                     <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
-                                    <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
-                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">Conditions</a></li>
+                                    <li><a asp-controller="Contact" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
+                                    <li class="last"><a asp-controller="TermsAndConditions" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Conditions)</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -137,10 +137,10 @@
                     <div class="bottom-bar-inner-wrap">
                         <div class="bottom-bar-menu">
                             <ul class="bottom-nav">
-                                <li><a asp-controller="Home" asp-action="Index">HOME</a></li>
-                                <li><a asp-controller="About" asp-action="Index">ABOUT</a></li>
-                                <li><a asp-controller="Services" asp-action="Construction">SERVICES</a></li>
-                                <li><a asp-controller="Contact" asp-action="Index">CONTACT</a></li>
+                                <li><a asp-controller="Home" asp-action="Index" style="text-transform: uppercase">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
+                                <li><a asp-controller="About" asp-action="Index" style="text-transform: uppercase">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.About)</a></li>
+                                <li><a asp-controller="Services" asp-action="Construction" style="text-transform: uppercase">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Services)</a></li>
+                                <li><a asp-controller="Contact" asp-action="Index" style="text-transform: uppercase">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Contact)</a></li>
                             </ul>
                         </div>
                         <!-- /.bottom-bar-menu -->
@@ -154,7 +154,7 @@
     </div>
     <!-- /#wrapper -->
 
-    <a id="scroll-top">TOP</a>
+    <a id="scroll-top">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Top)</a>
 
     <!-- Javascript -->
     <partial name="Javascript" />
