--- a/ConstructionSite/Views/Shared/_mainnav.cshtml
+++ b/ConstructionSite/Views/Shared/_mainnav.cshtml
@@ -1,7 +1,9 @@
-﻿<nav id="main-nav" class="main-nav">
+﻿@inject SharedLocalizationService Localizer
+
+<nav id="main-nav" class="main-nav">
     <ul class="menu">
-        <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-        <li><a asp-controller="About" asp-action="Index">About</a></li>
+        <li class="current-menu-item"><a asp-controller="Home" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Home)</a></li>
+        <li><a asp-controller="About" asp-action="Index">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.About)</a></li>
         <li class="menu-item menu-item-has-children">
             <a href="#team">Services</a>
             @await Component.InvokeAsync("ServiceMenu")
