--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -62,7 +62,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images">
+                            <input type="file" name="file" id="f-name" class="form-control" placeholder="Images" required>
                         </div>
                     </div>
                     <div class="form-group">
