--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -6,13 +6,15 @@
 @using ConstructionSite.DTO.FrontViewModels.Contact
 @using ConstructionSite.DTO.FrontViewModels.Service
 @using ConstructionSite.DTO.FrontViewModels.SubService
+@using ConstructionSite.Helpers.Page 
 @using ConstructionSite.DTO.FrontViewModels.Testimonial
+@using ConstructionSite.DTO.AdminViewModels.News 
+@using ConstructionSite.Extensions.Pageinations
 @using ConstructionSite.DTO.FrontViewModels.Message
 @using ConstructionSite.DTO.AdminViewModels.Image
 @using ConstructionSite.DTO.FrontViewModels.Blog
 @using ConstructionSite.Views.Shared.Components
 @using ConstructionSite.DTO.FrontViewModels.Project
 @using ConstructionSite.Entity.Models
-@using ConstructionSite.DTO.FrontViewModels.Blog
 @using ConstructionSite.Localization
 @using ConstructionSite.Helpers.Constants 
